--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ build
 npm-debug.log
 backend/run/src/tempCodeRunnerFile.py
 backend/run/src/__pycache__/model.cpython-36.pyc
+backend/run/src/__pycache__/model.cpython-36.pyc
