--- a/frontend/postCRA/dapp-twitter-react-frontend/package.json
+++ b/frontend/postCRA/dapp-twitter-react-frontend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "history": "^4.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
+    "react-scripts": "2.1.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
