--- a/frontend/postCRA/dapp-twitter-react-frontend/package.json
+++ b/frontend/postCRA/dapp-twitter-react-frontend/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.1",
     "history": "^4.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -12,7 +14,8 @@
     "react-scripts": "2.1.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
