--- a/frontend/postCRA/dapp-twitter-react-frontend/package.json
+++ b/frontend/postCRA/dapp-twitter-react-frontend/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.0.1",
     "@material-ui/core": "^3.9.3",
+    "@types/date-fns": "^2.6.0",
     "bootstrap": "^4.3.1",
-    "formik": "^1.5.1",
+    "date-fns": "2.0.0-alpha.21",
+    "final-form": "^4.12.0",
+    "final-form-material-ui": "^0.3.0",
     "history": "^4.6.3",
+    "material-ui-pickers": "2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-final-form": "^4.1.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "2.1.8",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "yup": "^0.27.0"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
